--- a/SampleSpringYse/src/main/webapp/resources/css/indexstyle.css
+++ b/SampleSpringYse/src/main/webapp/resources/css/indexstyle.css
@@ -83,6 +83,96 @@ div.header h1 {
     display: block;
 }
 
-.box {
+.middle form {
     float: right;
+}
+
+.middle form input[type=text] {
+    width: 200px;
+    height: 30px;
+    font-size: 20px;
+    
+}
+
+.middle form input[type=submit] {
+    width: 60px;
+    height: 30px;
+    font-size: 18px;
+    color: purple;
+}
+
+.middle form button {
+    width: 60px;
+    height: 30px;
+    font-size: 18px;
+    color: purple;
+}
+
+.foot {
+    position: relative;
+    clear:both;
+}
+
+.foot thead tr{
+    background-color: green;
+    color: white;
+}
+
+.foot tbody tr:nth-child(odd) {
+    background-color: #F7F9FC;
+}
+
+.foot tbody tr:nth-child(even) {
+    background-color: #F7F9FC;
+}
+
+.foot table {
+    width: 100%;
+}
+
+.formtag input[type=text], .formtag p{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.formtag input[type=submit], .formtag button {
+    width: 100%;
+    background-color: darkorchid;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.formtag input[type=submit]:hover, .formtag button:hover {
+    background-color: purple;
+}
+
+.formtag input[type=text]:focus {
+    background-color: lightblue;
+    border: 3px solid #555;
+}
+
+.formtag {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 40px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.foot a:link, .foot a:visited {
+    color:black;
+}
+
+.foot a {
+	text-decoration: none;
 }
